src/components/Post/PostBody.scss
section article {
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: center;
  padding: $padding;
  margin-bottom: 8rem;
  overflow-x: visible;
}

h1, h2, h3, h4, h5, h6 {
  font-family: $heading-font-stack;
  margin: 1em 0 0;
}

h1 { font-size: 6rem; }
h2 { font-size: 3.8rem; }
h3 { font-size: 3.2rem; }
h4 { font-size: 2.6rem; }
h5 { font-size: 2.2rem; }
h6 { font-size: 2rem; }

h2.title {
  font-size: 4.4rem;
  line-height: 1.1;
  margin: 0.2rem 0;
}

a {
  color: $foreground-color;
  text-decoration: none;
  @include link-transition;


  &:hover {
    text-decoration: underline;
  }

}

a.continue {
  text-decoration: none;
  margin: 1.65rem 0;
  color: $accent-color;
  font-size: 0.8em;
  -webkit-tap-highlight-color: transparent;

  span {
    display: inline-block;
    background: #baacfd20;
    color: $accent-color;
    border-radius: $border-radius;
    padding: 1rem 2rem;
    @include link-transition;
    @include pop-animation;
  }

  &:hover {
    span {
      background: #baacfd40;
    }
  }
}

p a {
  color: $accent-color;
  border-radius: $border-radius;
  padding: 0 0.4rem;
  margin: 0 -0.4rem;

  &:hover {
    background: #baacfd30;
    text-decoration: none;
  }
}

p {
  margin: 1.65rem 0;
}

::selection {
  background: $selection-color;
}

main {
  img, article > video {
    @include bust-out;
  }

  pre {
    @include bust-out;
  }
}

section.read-next {
  img, video, pre, code {
    max-width: 100%;
    border-radius: $border-radius;
  }
}

article > video {
  margin: 1.65rem auto;
  object-fit: cover;
}

div, article {
  max-width: $small-width;

  img, video {
    padding: 0;
    border-radius: $border-radius;
  }

  code {
    font-size: 2rem;
    font-family: $mono-font-stack;
    background: #ddd;
    border-radius: $border-radius;
    padding: 0 0.4rem;
    margin: 0 -0.2rem;
  }

  a code {
    line-height: 3.3rem;
    @include link-transition;
    &:hover {
      background: none;
    }
  }

  pre {
    display: flex;
    justify-content: center;
    ::-webkit-scrollbar-corner, ::-webkit-scrollbar {
      display: none;
    }

    code {
      min-width: calc(#{$small-width} - (#{$padding} + 3.6rem) * 2);
      background: #2a2734;
      color: #f1ebff;
      font-family: $mono-font-stack;
      font-size: 1.8rem;
      border-radius: $border-radius;
      padding: 2.4rem 3.2rem;
      overflow: scroll;
      word-wrap: normal;

      @include mobile {
        min-width: auto;
        width: 100%;
        padding: $padding;
        border-radius: 0;
      }
    }
  }

  span.kicker {
    color: $accent-color;
    margin-left: 0.4rem;
  }

  span.post-date {
    opacity: 0.5;
    margin-bottom: 1.65rem;
    margin-left: 0.4rem;
  }
}

.iphone-x {
  flex-grow: 0;
  flex-shrink: 0;
  margin: 1.65rem auto;
  margin-bottom: -9rem;
  width: 526px;
  height: 998px;
  position: relative;

  @include tablet {
    width: 400px;
    height: 759px;
  }

  @include mobile {
    width: 380px;
    height: 721px;
    margin-left: -1.4rem;
    margin-right: -10rem;
  }

  @include mobile-small {
    width: 340px;
    height: 645px;
    margin-left: -3rem;
    margin-right: -10rem;
  }
}

.iphone-x:before {
  content: " ";
  background-image: url("/images/videoFrame@2x.png");
  background-size: auto 100%;
  background-repeat: no-repeat, no-repeat;
  background-position: center center, center center;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 4%;
  z-index: 9;
  pointer-events: none;
}
.iphone-x > video {
  // background: black;
  position: absolute;
  top: 2.54%;
  left:  9.6%;
  width: 71.1%; // 370px
  height: auto;
  cursor: pointer;
  z-index: 5;
}

